# rusty-hooks

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Readme.md  log0  log4rs.yml  run_in_debug.sh  scripts.schema.json
.github/workflows/: build_release.yml  build_release_binaries.yml  check.yml  docker.yml  lint.yml  on_release.yml  pull_request.yml  test.yml
.shadowenv.d/: .trust-f7149f9c
example/: example_start_script.sh  ingest_movies.sh  ingest_music.sh  scripts_config.json
src/: errors.rs  health_reporter.rs  logger.rs  main.rs  runner.rs  scripts.rs  syncthing.rs  utilities.rs  watcher.rs
src/errors/: script_errors.rs  shared_errors.rs  watcher_errors.rs
src/errors/command_line_errors/: enums.rs
src/errors/runtime_error/: enums.rs
src/errors/script_errors/: script_error.rs
src/errors/shared_errors/: shared_errors.rs
src/errors/watcher_errors/: config_error.rs  event_error.rs  path_error.rs  spawn_error.rs  subscriber_error.rs  thread_error.rs  timer_error.rs  watcher_error.rs
src/health_reporter/: init.rs
src/logger/: debug.rs  error.rs  info.rs  load.rs  macos_logger.rs  struct.rs  structs.rs
src/runner/: run.rs  struct.rs  structs.rs  types.rs
src/scripts/: load.rs  struct.rs  structs.rs
src/syncthing/: api.rs  client.rs  configs.rs  errors.rs  event_structs.rs  logger.rs  process_events.rs  scripts.rs  spawn_script.rs
src/utilities/: cli_args.rs  errors.rs  set_process_lockfile.rs  thread_types.rs  timer.rs  trait.rs  traits.rs
src/watcher/: configs.rs  event_loop.rs  init.rs  path_subscriber.rs  runner.rs  struct.rs  structs.rs  types.rs  watch_events.rs  watcher_scripts.rs
src/watcher/watcher_errors/: event_error.rs  path_error.rs  script_error.rs  thread_error.rs
tests/: command_line_args.rs  integration_tests.rs
tests/common/: mod.rs  stdout_strs.rs
tests/files/bad_scripts_location/: scripts_config.json  test_script.sh
