[package]
name = "rusty-hooks"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Barnes <011mbarnes@gmail.com>"]
description = "Triggers user-provided scripts based on file system events"
homepage = "https://github.com/mmbarness/rusty-hooks"
repository = "https://github.com/mmbarness/rusty-hooks"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-process = "1.6.0"
async-trait = "0.1.60"
chrono = "0.4.24"
clap = { version = "4.2.0", features = [ "derive" ]}
dotenv = "0.15.0"
env_logger = "0.10.0"
flume = "0.10.14"
futures = "0.3.25"
is_executable = "1.0.1"
itertools = "0.10.5"
log = "0.4.17"
merkle_hash = "3.2.0"
notify = { version = "5.1.0", features  = ["serde"]}
quote = "1.0.26"
reqwest = "0.11.14"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
sha2 = "0.10.6"
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.38"
threadpool = "1.8.1"
timer = "0.2.0"
tokio = { version = "1.23.0", features = ["full", "macros", "time"] }
walkdir = "2.3.3"
