[package]
name = "rusty-hooks"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Barnes <011mbarnes@gmail.com>"]
description = "Triggers user-provided scripts based on file system events"
homepage = "https://github.com/mmbarness/rusty-hooks"
repository = "https://github.com/mmbarness/rusty-hooks"

[profile.dev]
opt-level = 1              
overflow-checks = false     # Disable integer overflow checks.
debug = 2

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.70"
async-process = "1.6.0"
async-trait = "0.1.60"
chrono = "0.4.24"
clap = { version = "4.2.0", features = [ "derive" ]}
directories = "5.0.0"
dotenv = "0.15.0"
fd-lock = "4.0.0"
fs2 = "0.4.3"
futures = "0.3.25"
is_executable = "1.0.1"
itertools = "0.10.5"
log = "0.4.17"
log4rs = {version = "1.2.0", features=["rolling_file_appender", "compound_policy", "delete_roller", "fixed_window_roller"]}
merkle_hash = "3.2.0"
notify = { version = "5.1.0", features  = ["serde"]}
oslog = {version = "0.2.0", optional = true}
reqwest = "0.11.14"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["full", "macros", "time"] }

[dev-dependencies]
faux = "0.1.9"
loom = "0.5.6"
mocktopus = "0.8.0"
mockall = "0.11.4"

[features]
mac = ["oslog"]
